<resources>
    <string name="app_name">QuickNotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="or_login_with_social_accounts">Or login with social accounts</string>
    <string name="google">Google</string>
    <string name="add">Add</string>
    <string name="note_content">Note Content</string>
    <string name="note_title">NoTitle</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="profile_image">Profile Image</string>
    <string name="menu">Menu</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="back_button">Back button</string>
    <string name="small_medium_native_ads">ca-app-pub-3940256099942544/2247696110</string>

    <string name="ad_attribution">Ad</string>


    <string name="appOpenAds">ca-app-pub-3940256099942544/9257395921</string>
    <string name="signup">Signup</string>
    <string name="splash_screen">Splash Screen</string>

</resources>